<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jtesttools</groupId>
    <artifactId>jtesttools-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>jTest Tools Parent</name>
    <url>https://github.com/sandrogiacom/jtest-tools</url>

    <properties>
        <assertj.version>3.11.1</assertj.version>
        <maven.compile.version>3.8.0</maven.compile.version>
        <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
        <maven.failsafe.plugin.version>2.22.1</maven.failsafe.plugin.version>
        <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
        <mockito.version>2.23.4</mockito.version>
        <jacoco.maven.version>0.7.9</jacoco.maven.version>
        <java.version>11</java.version>
        <junit.jupiter.version>5.4.0</junit.jupiter.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <testcontainers.version>1.10.6</testcontainers.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compile.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <argLine>
                            <!-- ${argLine} - necessário para funcionar o jacoco corretamente-->
                            ${argLine} --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven.failsafe.plugin.version}</version>
                    <configuration>
                        <argLine>
                            <!-- ${argLine} - necessário para funcionar o jacoco corretamente-->
                            ${argLine} --illegal-access=permit
                        </argLine>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                            <configuration>
                                <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                                <skipTests>false</skipTests>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
